apport (0.71) UNRELEASED; urgency=low

  * cli/apport-cli, qt4/apport-qt: Fix bad grammar 'some minutes'. 
    (LP: #95296)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 26 Mar 2007 13:59:14 +0200

apport (0.70) feisty; urgency=low

  [ Martin Pitt ]
  * bin/apport-retrace: Add option --remove-tag to remove a Launchpad bug
    tag. This is intended for an automatic Malone crash retracing system.
  * debian/control: Bump python-launchpad-bugs dependency to ensure that we
    have Bug.[gs]et_metadata().
  * man/apport-retrace.1: Add documentation for --confirm and --remove-tag.
  * bin/apport-chroot: Add option --remove-tag and pass it to apport-retrace.
  * apport/chroot.py, fix_symlinks(): Convert chroot path prefixed absolute
    symlinks to relative symlinks to avoid fakechroot's weird handling of
    absolute symlinks.
  * Add bin/launchpad-crash-digger: Daemon for watching out for
    need-$ARCH-retrace tagged Ubuntu bugs in Launchpad and calling
    apport-retrace on them.
  * bin/apport-retrace: Mangle bug comment with StacktraceTop to not contain
    invalid UTF-8, to avoid getting Internal Server Errors from LP.
  * debian/local/setup-apport-retracer: Install libc6-i686{,-dbgsym} into an
    x86 chroot, to get sane x86 backtraces for crashes in libc.
  * debian/local/setup-apport-retracer:
    - Unpack and install python-launchpad-bugs locally if the package is not
      installed.
    - Link launchpad-crash-digger into the retracer's bin/ dir.
  * run-tests: Run tests with python's -tt flag to catch whitespace errors.
  * Replace tabs with spaces in all Python files. (LP: #93561)
  * Remove trailing white space in all Python files.
  * apport/report.py, add_proc_info(): Do not regard symlinks to executables
    as interpreted scripts any more (such as Debian alternatives). Add test
    case. (LP: #94732)
  * problem_report.py: Add new method get_new() which returns a set of all
    keys which have been added since load() or construction. Add test cases.